--- a/src/styles/common/global.scss
+++ b/src/styles/common/global.scss
@@ -70,6 +70,7 @@ select {
 :root {
   --red-color:#FF0000;
 --grey-color:rgba(41, 41, 41, 0.5);
+--pink-color:#E28376;
 }
 
 body {
@@ -77,6 +78,8 @@ body {
 	font-size: toRem(16);
 	font-size: clampBuilder(320, 1440, 14, 16);
   font-family: Roboto,sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 .container {
 	--max-width: 1837px;
@@ -126,15 +129,18 @@ z-index: 1;
   height: 100%;
   z-index: 6;
 }
+button {
+  cursor: pointer;
+}
 // header styles
 .header {
-  // padding: 32px 0;
   background-color: black;
   position: fixed;
   width: 100%;
   height: 80px;
   top: 0;
   display: flex;
+  z-index: 7;
 
   &.active {
     height: 100%;
@@ -162,6 +168,7 @@ z-index: 1;
     }
   }
   &__logo {
+    text-decoration: none;
     margin-top: 4px;
     svg {
       @include media-medium() {
@@ -257,7 +264,6 @@ color: white;
       gap: 40px;
     }
 
-    
     .header__search-btn,
     .header__auth-btn {
       display: none;
@@ -772,5 +778,227 @@ li:nth-child(1) {
 li:nth-child(2) {
   padding-right: 75px;
 }
+  }
+}
+// footer styles
+.footer {
+  background-color: #292929;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  margin-top: auto;
+
+  @include media-custom(1440px) {
+    padding-top: 78px;
+    padding-bottom: 30px;
+  }
+
+  @include media-custom(1920px) {
+    padding-top: 80px;
+  }
+
+  &__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  &__menu {
+    padding-bottom: 30px;
+
+    &--mobile {
+      @include media-medium() {
+        max-width: 363px;
+      }
+      @include media-custom(1440px) {
+          display: none;
+      }
+
+      ul {
+        padding: 0;
+        margin: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+        font-weight: 700;
+  font-size: 12px;
+  line-height: 14px;
+  text-transform: uppercase;
+  color: white;
+  row-gap: 20px;
+  
+  @include media-medium() {
+    row-gap: 10px;
+  }
+      }
+      li {
+        display: grid;
+        align-items: center;
+        grid-template-columns: repeat(2,max-content);
+        gap: 10px;
+      }
+      a {
+        text-decoration: none;
+        color: inherit;
+      }
+      li::before {
+        content: '';
+        width: 3px;
+        height: 3px;
+        border-radius: 50%;
+        background-color: white;
+      }
+      li:not(:last-child) {
+        padding-right: 18px;
+      }
+      li:nth-of-type(3) {
+        padding-right: 0;
+      }
+    }
+
+    &--desktop {
+      display: none;
+
+      @include media-custom(1440px) {
+        display: grid;
+        grid-template-columns: repeat(4,1fr);
+        gap: 80px;
+      }
+
+      @include media-custom(1920px) {
+        gap: 144px;
+      }
+
+      h2 {
+        font-weight: 700;
+font-size: 24px;
+line-height: 28px;
+color: white;
+padding-bottom: 20px;
+white-space: nowrap;
+      }
+
+      ul {
+        padding: 0;
+        margin: 0;
+        font-weight: 300;
+font-size: 16px;
+line-height: 19px;
+color: white;
+display: grid;
+gap: 15px;
+margin-top: 15px;
+
+a {
+  color: inherit;
+  text-decoration: none;
+  transition: .3s ease-in-out;
+}
+a:hover,
+a:active,
+a:focus {
+  color: var(--red-color);
+  text-decoration: underline;
+}
+      }
+    }
+
+    &-line {
+       width: 100%;
+       max-width: 240px;
+       height: 1px;
+       background-color: white;
+       position: absolute;
+    }
+    &-line::after {
+      content: '';
+      position: absolute;
+      right: 0;
+      top: -2px;
+      border-radius: 50%;
+      width: 5px;
+      height: 5px;
+      background-color: white;
+    }
+  }
+
+  &__social {
+    padding: 0;
+    margin: 0;
+    display: grid;
+    grid-auto-flow: column;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 20px;
+
+    svg,path {
+      transition: .3s ease-in-out;
+    }
+
+    svg:hover {
+
+      path {
+        fill: var(--pink-color);
+      }
+    }
+  }
+
+  &__bottom {
+    display: grid;
+    gap: 10px;
+  }
+  address {
+    white-space: nowrap;
+  }
+  p,address {
+    font-style: normal;
+    font-weight: 300;
+font-size: 12px;
+line-height: 14px;
+color: white;
+text-align: center;
+  }
+  &__conditions-price {
+    max-width: 320px;
+
+    @include media-medium() {
+      max-width: 100%;
+    }
+  }
+
+  &__policy {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    font-weight: 700;
+font-size: 12px;
+line-height: 14px;
+color: white;
+
+    a {
+      text-decoration: none;
+      color: inherit;
+    }
+
+    li:first-child {
+      padding-right: 4px;
+    }
+
+    li:not(:first-child)::before {
+         content: '';
+         width: 1px;
+         height: 80%;
+         background-color: white;
+    }
+
+    li:not(:first-child) {
+      display: grid;
+      grid-auto-flow: column;
+      align-items: center;
+      gap: 4px;
+    }
   }
 }
