--- a/src/styles/common/global.scss
+++ b/src/styles/common/global.scss
@@ -897,7 +897,7 @@ a {
 a:hover,
 a:active,
 a:focus {
-  color: var(--red-color);
+  color: var(--pink-color);
   text-decoration: underline;
 }
       }
