--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -209,8 +209,8 @@ align-self: center;
        }
     }
     &__pagination-current--index::before {
-        transform: scale(1.3, 0.8);
-        transition: transform 5ms cubic-bezier(0, 0, 0.5, 1);
+        transform: scale(1.2, 0.9);
+        transition: transform 1ms ease-in-out;
     }
 
     &__pagination-current[data-index="0"] {
