--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -60,6 +60,10 @@ text-transform: uppercase;
 text-align: center;
 color: white;
 padding-bottom: 10px;
+transform: translateY(25%);
+opacity: 0;
+visibility: hidden;
+transition: 0.6s all ease-in-out;
 
 @include media-medium() {
     text-align: left;
@@ -84,6 +88,10 @@ text-align: center;
 color: white;
 padding-bottom: 20px;
 max-width: 262px;
+transform: translateY(25%);
+opacity: 0;
+visibility: hidden;
+transition: 0.6s all ease-in-out;
 
 @include media-medium() {
     text-align: left;
@@ -110,6 +118,10 @@ max-width: 650px;
         height: 40px;
         font-size: 12px;
         line-height: 14px;
+        transform: translateY(25%);
+opacity: 0;
+visibility: hidden;
+transition: 0.6s all ease-in-out;
 
         @include media-medium() {
             max-width: 180px;
@@ -175,7 +187,7 @@ align-self: center;
         }
         .swiper-pagination-bullet-active::before {
             transform: scale(0);
-            transition: transform 250ms cubic-bezier(0, 0, 0.25, 1);
+            transition: transform 50ms cubic-bezier(0, 0, 0.25, 1);
         }
         .swiper-pagination-bullet-active:hover::before {
             opacity: 1;
@@ -210,7 +222,7 @@ align-self: center;
     }
     &__pagination-current--index::before {
         transform: scale(1.2, 0.9);
-        transition: transform 1ms ease-in-out;
+        transition: transform 50ms ease-in-out;
     }
 
     &__pagination-current[data-index="0"] {
@@ -227,6 +239,13 @@ align-self: center;
     }
     &__pagination-current[data-index="4"] {
         transform: translateX(486%);
+    }
+    .swiper-slide-visible h2,
+    .swiper-slide-visible h3,
+    .swiper-slide-visible .cta-slider__btn {
+        opacity: 1;
+        visibility: visible;
+        transform: translateY(0);
     }
 }
 
