--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -16,6 +16,8 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
+        transform: translateY(2%);
+        transition: all 0.6s linear;
     }
 
     &__slide {
@@ -239,6 +241,10 @@ align-self: center;
     }
     &__pagination-current[data-index="4"] {
         transform: translateX(486%);
+    }
+
+    .swiper-slide-visible img {
+        transform: translateY(0);
     }
     .swiper-slide-visible h2,
     .swiper-slide-visible h3,
