--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -16,7 +16,7 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
-        transform: translateY(2%);
+        transform: translateY(-5px);
         transition: all 0.6s linear;
     }
 
@@ -65,7 +65,7 @@ padding-bottom: 10px;
 transform: translateY(25%);
 opacity: 0;
 visibility: hidden;
-transition: 0.6s all ease-in-out;
+transition: 0.6s transform,opacity,visibility ease-in-out;
 
 @include media-medium() {
     text-align: left;
@@ -93,7 +93,7 @@ max-width: 262px;
 transform: translateY(25%);
 opacity: 0;
 visibility: hidden;
-transition: 0.6s all ease-in-out;
+transition: 0.6s transform,opacity,visibility ease-in-out;
 
 @include media-medium() {
     text-align: left;
@@ -123,7 +123,7 @@ max-width: 650px;
         transform: translateY(25%);
 opacity: 0;
 visibility: hidden;
-transition: 0.6s all ease-in-out;
+transition: 0.6s transform,opacity,visibility ease-in-out;
 
         @include media-medium() {
             max-width: 180px;
