--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -174,13 +174,13 @@ align-self: center;
     border: 2px solid white;
     border-radius: 50%;
     transform: scale(1);
-    transition: transform 120ms cubic-bezier(0.25, 0.1, 0.25, 1), opacity 40ms cubic-bezier(0.25, 0.5, 0, 1);
-    opacity: 0.575;
+    transition: transform 450ms cubic-bezier(0.25, 0.1, 0.25, 1);
+    // opacity: 0.575;
         }
-        .swiper-pagination-bullet:hover::before {
-            opacity: 1;
-            transform: scale(1.2);
-        }
+        // .swiper-pagination-bullet:hover::before {
+        //     opacity: 1;
+        //     transform: scale(1.2);
+        // }
         .swiper-pagination-bullet-active {
             --swiper-pagination-bullet-width:23px;
             --swiper-pagination-bullet-height:23px;
@@ -189,11 +189,7 @@ align-self: center;
         }
         .swiper-pagination-bullet-active::before {
             transform: scale(0);
-            transition: transform 50ms cubic-bezier(0, 0, 0.25, 1);
-        }
-        .swiper-pagination-bullet-active:hover::before {
-            opacity: 1;
-            transform: scale(1.2);
+            transition: transform 450ms cubic-bezier(0, 0, 0.25, 1);
         }
     }
     &__pagination-current {
