--- a/src/styles/common/global.scss
+++ b/src/styles/common/global.scss
@@ -161,6 +161,7 @@ main {
 .variant-1-btn.disable {
   opacity: .5;
 }
+[x-cloak] { display: none !important; }
 // header styles
 .header {
   background-color: black;
@@ -438,8 +439,11 @@ color: white;
       z-index: -7;
       background-color: white;
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-      transform: translateX(-100%);
-      transition: transform .3s ease-in-out;
+      transform-origin: top center;
+      transform: rotateX(-90deg);
+      opacity: 0;
+      visibility: hidden;
+      transition: all 0.25s ease;
       padding-top: 46px;
 
       @include media-custom(1440px) {
@@ -458,8 +462,10 @@ color: white;
       }
 
       &.active {
-        transform: translateX(0);
+        opacity: 1;
+        visibility: visible;
         z-index: 7;
+        transform: rotateX(0deg);
       }
 
       &-wrapper {
@@ -583,6 +589,17 @@ span {
     opacity: 1;
     transition: transform .4s cubic-bezier(.19,1,.22,1),opacity 0s 0s;
     z-index: 7;
+
+    .mobile-menu__phone {
+      opacity: 1;
+      visibility: visible;
+      transition: visibility 0s ease 0.3s, opacity 0.3s cubic-bezier(0.19, 1, 0.22, 1) 0s, transform 0.5s cubic-bezier(0.19, 1, 0.22, 1) 0s;
+    }
+    .mobile-menu__list {
+    visibility: visible;
+    opacity: 1;
+    transition: visibility 0s ease 0s, opacity 0.3s cubic-bezier(0.19, 1, 0.22, 1) 0.2s, transform 0.5s cubic-bezier(0.19, 1, 0.22, 1) 0s;
+    }
   }
 
   &__top {
@@ -597,6 +614,10 @@ span {
     font-weight: 300;
     color: black;
     text-align: center;
+    opacity: 0;
+    visibility: hidden;
+    transition: visibility 0s ease 0s, opacity 0.3s cubic-bezier(0.19, 1, 0.22, 1) 0.2s, transform 0.5s cubic-bezier(0.19, 1, 0.22, 1) 0s;
+
     a {
       text-transform: uppercase;
       text-decoration: none;
@@ -614,6 +635,9 @@ span {
     margin: 0;
     padding: 0;
     display: grid;
+    opacity: 0;
+    visibility: hidden;
+    transition: visibility 0s ease 0s, opacity 0.3s cubic-bezier(0.19, 1, 0.22, 1) 0.2s, transform 0.5s cubic-bezier(0.19, 1, 0.22, 1) 0s;
   }
   &__item {
     padding-top: 10px;
