--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -250,5 +250,125 @@ align-self: center;
         transform: translateY(0);
     }
 }
+.video {
+    position: relative;
+    height: 500px;
 
+    @include media-custom(1440px) {
+        height: 700px;
+    }
+    iframe {
+        width: 100%;
+        height: 100%;
+    }
+
+    &__overlay {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(180deg, #0B0C0D 0%, rgba(11, 12, 13, 0) 48.96%, #0B0C0D 100%);
+        bottom: 0;
+        z-index: 1;
+    }
+
+    &__info {
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        justify-content: flex-end;
+        z-index: 2;
+        margin-bottom: 60px;
+        padding-right: 20px;
+
+        @include media-medium() {
+            padding-right: 40px;
+        }
+
+        @include media-custom(1440px) {
+            padding-right: 80px;
+            margin-bottom: 120px;
+        }
+
+        h2 {
+            font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+    text-transform: uppercase;
+    text-align: right;
+    color: white;
+    padding-bottom: 10px;
+    
+    @include media-medium() {
+        font-size: 16px;
+        line-height: 19px;
+    }
+    
+    @include media-custom(1440px) {
+        font-size: 20px;
+    line-height: 23px;
+    }
+    @include media-custom(1920px) {
+        font-size: 24px;
+    line-height: 28px;
+    }
+        }
+    
+        h3 {
+            font-weight: 700;
+            font-size: 20px;
+            line-height: 23px;
+    text-align: right;
+    color: white;
+    padding-bottom: 20px;
+    max-width: 268px;
+    
+    @include media-medium() {
+        max-width: 326px;
+        font-size: 24px;
+        line-height: 28px;
+    }
+    
+    @include media-custom(1440px) {
+        font-size: 36px;
+    line-height: 42px;
+    max-width: 476px;
+    padding-bottom: 30px;
+    }
+    @include media-custom(1920px) {
+        font-size: 64px;
+    line-height: 75px;
+    max-width: 650px;
+    }
+        }
+  }
+  &__btn {
+    font-weight: 300;
+    max-width: 160px;
+    height: 40px;
+    font-size: 12px;
+    line-height: 14px;
+
+    @include media-medium() {
+        max-width: 180px;
+        font-size: 14px;
+        line-height: 16px;
+    }
+    @include media-custom(1440px) {
+        max-width: 240px;
+        height: 50px;
+        font-size: 16px;
+        line-height: 19px;
+    }
+    @include media-custom(1920px) {
+        max-width: 280px;
+        height: 50px;
+        font-size: 20px;
+        line-height: 23px;
+    }
+}
+}
 /* index styles - end */
