--- a/src/styles/common/global.scss
+++ b/src/styles/common/global.scss
@@ -80,11 +80,12 @@ body {
   font-family: Roboto,sans-serif;
   display: flex;
   flex-direction: column;
+  background-color: black;
 }
 .container {
 	--max-width: 1837px;
-  --padding-left:20px;
-  --padding-right:20px;
+  --padding-left:10px;
+  --padding-right:10px;
 	width: Min(100%, var(--max-width));
 	margin-left: auto;
 	margin-right: auto;
@@ -92,8 +93,13 @@ body {
 	padding-right: var(--padding-right);
 
   @include media-medium() {
-    --padding-left:40px;
-    --padding-right:40px;
+    --padding-left:20px;
+    --padding-right:20px;
+  }
+
+  @include media-custom(1440px) {
+    --padding-left:80px;
+    --padding-right:80px;
   }
 }
 .grid {
@@ -158,10 +164,101 @@ main {
   color: black;
   transition: .3s ease-in-out;
 }
-.variant-1-btn.disable {
-  opacity: .5;
-}
+.variant-2-btn {
+  border: 1px solid white;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-transform: uppercase;
+  text-decoration: none;
+  width: 100%;
+  transition: .3s ease-in-out;
+  color: black;
+  text-align: center;
+ }
 [x-cloak] { display: none !important; }
+
+.section-title {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 220px;
+  position: relative;
+  font-style: italic;
+font-weight: 500;
+font-size: 16px;
+line-height: 19px;
+color: white;
+padding-bottom: 5px;
+
+@include media-medium() {
+  max-width: 280px;
+  font-size: 20px;
+line-height: 23px;
+}
+
+@include media-custom(1440px) {
+  max-width: 440px;
+  font-size: 32px;
+line-height: 38px;
+}
+
+@include media-custom(1920px) {
+  font-size: 36px;
+line-height: 42px;
+}
+
+  &::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 1px;
+    background-color: white;
+  }
+
+  &::before {
+    content: '';
+    position: absolute;
+    bottom: -5px;
+    width: 100%;
+    max-width: 160px;
+    height: 5px;
+    background-color: white;
+    border-radius: 0px 0px 10px 10px;
+
+    @include media-medium() {
+      max-width: 180px;
+    }
+
+    @include media-custom(1440px) {
+      max-width: 240px;
+      height: 10px;
+      bottom: -10px;
+    }
+  }
+
+  &__circle {
+    width: 16px;
+    height: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid white;
+    border-radius: 50%;
+
+    &::after {
+      content: '';
+      width: 6px;
+      height: 6px;
+      background-color: white;
+      border-radius: 50%;
+      margin: auto;
+    }
+  }
+}
 // header styles
 .header {
   background-color: black;
@@ -171,6 +268,15 @@ main {
   top: 0;
   display: flex;
   z-index: 7;
+
+  &__container {
+    --padding-left:20px;
+    --padding-right:20px;
+    @include media-medium() {
+      --padding-left:40px;
+    --padding-right:40px;
+    }
+  }
 
   &.active {
     height: 100%;
