--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -16,8 +16,6 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
-        transform: translateY(-2px);
-        transition: all 0.6s linear;
     }
 
     &__slide {
@@ -239,9 +237,6 @@ align-self: center;
         transform: translateX(486%);
     }
 
-    .swiper-slide-visible img {
-        transform: translateY(0);
-    }
     .swiper-slide-visible h2,
     .swiper-slide-visible h3,
     .swiper-slide-visible .cta-slider__btn {
@@ -250,12 +245,18 @@ align-self: center;
         transform: translateY(0);
     }
 }
-.video {
+.index-video {
     position: relative;
     height: 500px;
+    margin-bottom: 20px;
 
     @include media-custom(1440px) {
         height: 700px;
+        margin-bottom: 60px;
+    }
+    @include media-custom(1920px) {
+        height: 700px;
+        padding-bottom: 55px;
     }
     iframe {
         width: 100%;
@@ -370,5 +371,508 @@ align-self: center;
         line-height: 23px;
     }
 }
+}
+.clothes-card {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    width: 100%;
+    max-width: 170px;
+
+    @include media-medium() {
+        max-width: 240px;
+    }
+
+    @include media-custom(1440px) {
+        max-width: 300px;
+    }
+
+    @include media-custom(1920px) {
+        max-width: 400px;
+    }
+    
+    &__img {
+        position: relative;
+    }
+
+    &__top {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        padding-top: 10px;
+        padding-left: 10px;
+        padding-right: 10px;
+        transition: all .3s ease-in-out;
+
+        &:hover {
+            background: linear-gradient(162.26deg, rgba(11, 12, 13, 0.5) 43.48%, rgba(1, 1, 1, 0.5) 87.88%);
+            border: 1px solid #FFFFFF;
+            backdrop-filter: blur(2px);
+
+            .clothes-card__link {
+                display: flex;
+            }
+        }
+    }
+
+    &__badges {
+        display: flex;
+        align-items: flex-start;
+        justify-content: space-between;
+    }
+    &__badges-left {
+        display: grid;
+        gap:10px;
+    }
+    &__badge-new {
+        width: 30px;
+        height: 40px;
+        background-color: white;
+        color: black;
+        font-style: italic;
+font-weight: 500;
+font-size: 12px;
+line-height: 14px;
+text-transform: uppercase;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        span {
+            transform: rotate(-90deg);
+        }
+
+        @include media-medium() {
+            width: 40px;
+            height: 60px;
+            font-size: 16px;
+             line-height: 19px;
+        }
+
+        @include media-custom(1920px) {
+            height: 80px;
+            font-size: 20px;
+            line-height: 23px;
+        }
+    }
+
+    &__badge-sale {
+        width: 30px;
+        height: 40px;
+        background-color: var(--pink-color);
+        color: black;
+        font-style: italic;
+font-weight: 500;
+font-size: 12px;
+line-height: 14px;
+text-transform: uppercase;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        span {
+            transform: rotate(-90deg);
+        }
+
+        @include media-medium() {
+            width: 40px;
+            height: 60px;
+            font-size: 16px;
+             line-height: 19px;
+        }
+        @include media-custom(1920px) {
+            height: 80px;
+            font-size: 20px;
+            line-height: 23px;
+        }
+    }
+
+    &__badge-discount {
+        width: 30px;
+        height: 30px;
+        background-color: black;
+        color: white;
+        font-style: italic;
+font-weight: 500;
+font-size: 10px;
+line-height: 12px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        @include media-custom(1440px) {
+            width: 40px;
+            height: 40px;
+            font-size: 16px;
+            line-height: 19px;
+        }
+    }
+
+    &__heart {
+
+        &.active {
+            animation: scale-up .25s cubic-bezier(.77, -0.19, .33, 1.12);
+
+            .clothes-card__heart-icon-stroke {
+                 opacity: 0;
+            }
+            .clothes-card__heart-icon-fill {
+                opacity: 1;
+           }
+        }
+
+        svg {
+            width: 20px;
+            height: 18px;
+
+            @include media-custom(1440px) {
+                width: 30px;
+                height: 26px;
+            }
+        }
+
+        @include media-custom(1440px) {
+            &:hover {
+                opacity: .5;
+            }
+        }
+    }
+
+    &__heart-icon-stroke {
+        opacity: 1;
+    transform: translateZ(0);
+    transition: 0.2s ease-in-out opacity;
+}
+&__heart-icon-fill {
+    opacity: 0;
+transform: translateZ(0);
+transition: 0.2s ease-in-out opacity;
+}
+
+    &__link {
+        display: none;
+        max-width: 280px;
+        height: 35px;
+        margin-top: 53px;
+        font-weight: 700;
+font-size: 11px;
+line-height: 19px;
+
+@include media-custom(1920px) {
+    height: 50px;
+    font-size: 20px;
+    line-height: 23px;
+    margin-left: auto;
+    margin-right: auto;
+}
+    }
+
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    figcaption {
+       display: flex;
+       align-items: center;
+       justify-content: center;
+       text-align: center;
+color: black;
+background-color: white;
+padding: 8px 0;
+
+@include media-medium() {
+    padding: 12px 0;
+}
+
+@include media-custom(1440px) {
+    padding-top: 14px;
+    padding-bottom: 17px;
+}
+
+@include media-custom(1440px) {
+    padding: 20px 0;
+}
+
+h3 {
+    font-weight: 300;
+font-size: 12px;
+line-height: 14px;
+
+@include media-medium() {
+    font-size: 14px;
+line-height: 16px;
+}
+
+@include media-custom(1440px) {
+    font-size: 16px;
+line-height: 19px;
+}
+
+@include media-custom(1440px) {
+    font-size: 20px;
+line-height: 23px;
+}
+}
+    }
+}
+.new-collections {
+    padding-top: 20px;
+    padding-bottom: 20px;
+
+    @include media-custom(1440px) {
+        padding-bottom: 60px;
+    }
+
+    &__container {
+        @include media-medium() {
+            display: grid;
+            grid-template-columns: repeat(2,1fr);
+            justify-content: space-between;
+            --padding-left:20px;
+            --padding-right:20px;
+        }
+        @include media-custom(1440px) {
+            --padding-left:80px;
+            --padding-right:80px;
+        }
+    }
+
+    h2 {
+        margin-bottom: 29px;
+
+        @include media-medium() {
+            margin-bottom: 31px;
+        }
+        @include media-custom(1440px) {
+            margin-bottom: 79px;
+        }
+    }
+
+    &__btn-group {
+        justify-self: flex-end;
+        @include media-custom(1440px) {
+            display: grid;
+            grid-auto-flow: column;
+            gap: 40px;
+        }
+    }
+
+    &__link {
+        display: none;
+        min-width: 220px;
+        height: 40px;
+        font-weight: 300;
+        font-size: 14px;
+        line-height: 16px;
+
+        @include media-medium() {
+            display: flex;
+            margin-top: -0.6rem;
+        }
+        @include media-custom(1440px) {
+            margin-top: 0;
+            min-width: 260px;
+            height: 50px;
+            background-color: white;
+            border: 1px solid white;
+            color: black;
+            font-size: 16px;
+            line-height: 19px;
+            font-weight: 700;
+        }
+
+        @include media-custom(1920px) {
+            min-width: 300px;
+            font-size: 20px;
+           line-height: 23px;
+        }
+    }
+
+    &__link-2 {
+        display: none;
+        font-weight: 300;
+        font-size: 16px;
+        line-height: 19px;
+        min-width: 280px;
+        height: 50px;
+
+        @include media-custom(1440px) {
+            display: flex;
+        }
+
+        @include media-custom(1920px) {
+            min-width: 340px;
+            font-size: 20px;
+            line-height: 23px;
+        }
+    }
+}
+.new-collections-slider {
+
+    &__container {
+        --padding-left:10px;
+        --padding-right:0;
+
+        @include media-medium() {
+            --padding-left:0;
+        }
+        @include media-custom(1440px) {
+            --padding-left: 80px;
+            --padding-right: 80px;
+        }
+    }
+
+    &__wrapper {
+        padding: 0;
+        margin: 0;
+        transition: transform .6s ease-in-out;
+
+        @include media-medium() {
+            margin-left: -160px;
+        }
+
+        @include media-custom(1440px) {
+            margin-left: 0;
+        }
+    }
+
+    &__slide {
+        max-width: 170px;
+        transition: transform .6s ease-in-out;
+
+        @include media-medium() {
+            max-width: 240px;
+        }
+
+        @include media-custom(1440px) {
+            max-width: 300px;
+        }
+
+        @include media-custom(1920px) {
+            max-width: 400px;
+        }
+    }
+
+    &__link {
+        font-weight: 700;
+font-size: 12px;
+line-height: 14px;
+text-transform: uppercase;
+height: 30px;
+margin-top: 20px;
+max-width: 359px;
+
+@include media-custom(376px) {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+    @include media-medium() {
+        display: none;
+    }
+
+}
+
+    &__pagination {
+        position: static;
+        margin-top: 30px;
+
+        @include media-custom(1440px) {
+            display: none;
+        }
+
+        .swiper-pagination-bullet {
+            --swiper-pagination-bullet-width:10px;
+            --swiper-pagination-bullet-height:10px;
+            --swiper-pagination-bullet-inactive-color:white;
+            --swiper-pagination-bullet-inactive-opacity: .3;
+            --swiper-pagination-bullet-horizontal-gap:5px;
+        }
+        .swiper-pagination-bullet-active {
+            --swiper-pagination-color:white;
+            --swiper-pagination-bullet-width: 15px;
+            --swiper-pagination-bullet-height: 15px;
+        }
+    }
+
+    &__button-prev {
+        left: 0;
+    }
+    &__button-next {
+        right: 0;
+    }
+
+    &__button-prev,
+    &__button-next {
+        display: none;
+        height: 100%;
+        max-width: 140px;
+        width: 100%;
+        top: 21px;
+        background: rgba(255, 255, 255, 0.5);
+box-shadow: 5px 0px 30px rgba(0, 0, 0, 0.25);
+backdrop-filter: blur(2px);
+
+        @include media-custom(1440px) {
+            display: flex;
+        }
+    }
+
+    &__button-prev.swiper-button-disabled,
+    &__button-next.swiper-button-disabled {
+        opacity: 1;
+    } 
+
+    &__button-prev span svg {
+        transform: rotate(180deg);
+    }
+
+    &__button-prev span,
+    &__button-next span {
+        width: 40px;
+        height: 40px;
+        background-color: transparent;
+        border: 1px solid black;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: .3s ease-in-out;
+
+        svg {
+            transition: .3s ease-in-out;
+            path {
+                transition: .3s ease-in-out;
+            }
+        }
+
+        @include media-custom(1920px) {
+            width: 60px;
+            height: 60px;
+        }
+    }
+
+    &__button-prev:hover,
+    &__button-next:hover {
+
+        span { 
+            background-color: black;
+        }
+
+        svg {
+            path {
+                fill: white;
+            }
+        }
+    }
+}
+
+@keyframes scale-up {
+    50% {
+        transform: scale(1.5);
+    }
 }
 /* index styles - end */
