--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -875,4 +875,374 @@ backdrop-filter: blur(2px);
         transform: scale(1.5);
     }
 }
+
+.collection-gallery {
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+
+    &__container {
+        @include media-custom-max(767px) {
+            --padding-left:0;
+            --padding-right:0;
+        }
+    }
+
+    @include media-medium() {
+        min-height: 240px;
+        grid-template-columns: 320px 1fr;
+    }
+
+    @include media-custom(1440px) {
+        grid-template-columns: 500px 1fr;
+        min-height: 400px;
+    }
+
+    @include media-custom(1920px) {
+        grid-template-columns: 600px 1fr;
+        min-height: 600px;
+        gap: 40px;
+    }
+
+    &--m-b {
+        margin-bottom: 20px;
+
+        @include media-custom(1920px) {
+            margin-bottom: 40px;
+        }
+    }
+    &--reversed {
+
+        @include media-medium() {
+            grid-template-columns: 1fr 320px;
+        }
+
+        @include media-custom(1440px) {
+            grid-template-columns: 1fr 500px;
+        }
+
+        @include media-custom(1920px) {
+            grid-template-columns: 1fr 600px;
+        }
+
+        .collection-gallery__left {
+            order: 1;
+        }
+    }
+
+    &__img-gallery {
+        padding: 0;
+        margin: 0;
+        position: relative;
+        width: 100%;
+        height: 100%;
+
+        picture {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            left: 0;
+            top: 0;
+        }
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+
+            @include media-custom(1440px) {
+                object-position: top;
+            }
+        }
+
+        li {
+            position: absolute;
+            z-index: 0;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: flex-end;
+            transform: scale(0);
+            visibility: hidden;
+            transition: .5s ease-in-out;
+
+            &.active {
+                transform: scale(1);
+                visibility: visible;
+                z-index: 1;
+            }
+        }
+    }
+
+    &__link {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        min-width: 160px;
+        height: 40px;
+        background-color: black;
+        color: white;
+        font-weight: 700;
+font-size: 12px;
+line-height: 14px;
+text-transform: uppercase;
+margin: 0 auto;
+margin-bottom: 10px;
+text-decoration: none;
+z-index: 2;
+
+@include media-medium() {
+    display: none;
+}
+    }
+
+    &__right {
+        background-color: white;
+        padding-top: 20px;
+        padding-left: 22px;
+        padding-right: 22px;
+        padding-bottom: 30px;
+        display: grid;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+
+        @include media-custom(1440px) {
+            padding-top: 105px;
+        }
+
+        @include media-custom(1440px) {
+            padding-top: 196px;
+        }
+
+        p {
+            font-weight: 700;
+font-size: 16px;
+line-height: 19px;
+text-transform: uppercase;
+color: black;
+padding-bottom: 5px;
+
+@include media-medium() {
+    font-size: 24px;
+line-height: 28px;
+padding-bottom: 10px;
+}
+
+@include media-custom(1440px) {
+    padding-bottom: 30px;
+    font-size: 36px;
+line-height: 42px;
+} 
+
+@include media-custom(1920px) {
+    padding-bottom: 20px;
+    font-size: 64px;
+line-height: 75px;
+} 
+        }
+
+        span {
+            font-weight: 300;
+            font-size: 12px;
+            line-height: 14px;
+            text-transform: uppercase;
+            color: black;
+            padding-bottom: 36px;
+            display: block;
+
+            @include media-medium() {
+                font-size: 24px;
+            line-height: 28px;
+            padding-bottom: 30px;
+            }
+            @include media-custom(1440px) {
+                padding-bottom: 20px;
+            } 
+            @include media-custom(1920px) {
+                font-size: 36px;
+                line-height: 42px;
+            }
+        }
+
+        .collection-gallery__link {
+            display: none;
+            width: 100%;
+            max-width: 220px;
+            height: 40px;
+            align-items: center;
+            justify-content: center;
+            text-decoration: none;
+            border: 1px solid black;
+            font-weight: 300;
+            font-size: 16px;
+            line-height: 19px;
+            color: black;
+            margin-bottom: 20px;
+            background-color: transparent;
+
+            @include media-medium() {
+                display: flex;
+            }
+
+            @include media-custom(1440px) {
+                max-width: 240px;
+                background-color: black;
+                color: white;
+                font-weight: 700;
+                font-size: 20px;
+                line-height: 23px;
+                text-transform: uppercase;
+                margin-bottom: 33px;
+                height: 50px;
+            }
+
+            @include media-custom(1920px) {
+                max-width: 300px;
+                font-size: 24px;
+                line-height: 28px;
+                margin-bottom: 43px;
+            }
+        }
+    }
+
+    &__right-text {
+        @include media-custom(1440px) {
+            display: flex;
+            flex-direction: column;
+        }
+
+        p {
+            @include media-custom(1440px) {
+                order: 1;
+            }
+        }
+    }
+
+    &__thumbnail-gallery {
+        display: grid;
+        gap: 10px;
+        align-items: center;
+        justify-content: center;
+    }
+
+    &__detail-thumbnail-gallery {
+        padding: 0;
+        margin: 0;
+        position: relative;
+        width: 40px;
+        height: 43px;
+        margin: auto;
+
+        @include media-medium() {
+            display: none;
+        }
+
+        picture {
+            height: 40px;
+        }
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        li {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            opacity: 0;
+            visibility: hidden;
+            transition: .5s ease-in-out;
+            z-index: 0;
+
+            &.active {
+                opacity: 1;
+                visibility: visible;
+                z-index: 1;
+            }
+        }
+    }
+    &__small-thumbnail-gallery {
+       padding: 0;
+       margin: 0;
+       display: grid;
+       grid-auto-flow: column;
+       gap: 10px;
+
+       @include media-medium() {
+        align-items: flex-end;
+       }
+
+       @include media-custom(1440px) {
+        gap: 20px;
+       }
+
+       img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+
+        @include media-custom(1440px) {
+            object-position: top;
+        }
+       }
+
+       picture {
+        @include media-medium() {
+            width: 100%;
+            height: 100%;
+        }
+       }
+
+       li {
+         width: 30px;
+         height: 30px;
+         filter: opacity(30%);
+         transition: filter .5s ease-in-out;
+
+         @include media-medium() {
+            width: 40px;
+            height: 40px;
+            transition: .5s ease-in-out;
+         }
+
+         @include media-custom(1440px) {
+            width: 60px;
+            height: 60px;
+         }
+
+         @include media-custom(1920px) {
+            width: 80px;
+            height: 80px;
+         }
+
+         &.active {
+            filter: opacity(100%);
+
+            @include media-medium() {
+                width: 60px;
+                height: 63px;
+            }
+
+            @include media-custom(1440px) {
+                width: 80px;
+                height: 85px;
+             }
+
+             @include media-custom(1920px) {
+                width: 120px;
+                height: 125px;
+             }
+
+         }
+       }
+    }
+}
+
+
 /* index styles - end */
