--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -687,9 +687,6 @@ line-height: 23px;
             margin-top: 0;
             min-width: 260px;
             height: 50px;
-            background-color: white;
-            border: 1px solid white;
-            color: black;
             font-size: 16px;
             line-height: 19px;
             font-weight: 700;
@@ -987,10 +984,8 @@ backdrop-filter: blur(2px);
         display: flex;
         align-items: center;
         justify-content: center;
-        min-width: 160px;
+        max-width: 160px;
         height: 40px;
-        background-color: black;
-        color: white;
         font-weight: 700;
 font-size: 12px;
 line-height: 14px;
@@ -1096,8 +1091,6 @@ line-height: 75px;
 
             @include media-custom(1440px) {
                 max-width: 240px;
-                background-color: black;
-                color: white;
                 font-weight: 700;
                 font-size: 20px;
                 line-height: 23px;
@@ -1476,6 +1469,31 @@ line-height: 75px;
         font-weight: 500;
 font-size: 10px;
 line-height: 12px;
+border: 1px solid white;
+ background-color: transparent;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ text-transform: uppercase;
+ text-decoration: none;
+ width: 100%;
+ transition: .3s ease-in-out;
+ color: white;
+ overflow: hidden;
+ position: relative;
+ z-index: 0;
+
+ &::after {
+    content: '';
+	position: absolute;
+	z-index: -1;
+  width: 100%;
+	height: 0;
+	top: 0;
+	left: 0;
+	background-color: white;
+  transition: all 0.4s;
+ }
 
 @include media-medium() {
     min-width: 51px;
@@ -1499,6 +1517,10 @@ line-height: 19px;
 }
 
 &.active {
+    color: black;
+    &::after {
+        height: 100%;
+    }
     @include media-medium() {
         font-weight: 700;
 font-size: 16px;
@@ -1736,31 +1758,19 @@ span {
         }
         a {
             text-decoration: none;
-            display: flex;
-            align-items: center;
-            justify-content: center;
             text-align: center;
             font-weight: 700;
             font-size: 16px;
             line-height: 19px;
             text-transform: uppercase;
-            color: black;
             padding-top: 11px;
             padding-bottom: 10px;
-            background-color: white;
-            transition: .3s ease-in-out;
 
             @include media-custom(1440px) {
                 padding: 16px 0;
                 font-size: 24px;
                 line-height: 28px;
             }
-        }
-        a:hover,
-        a:active,
-        a:focus {
-            background-color: black;
-            color: white;
         }
     }
 }   
