--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -247,7 +247,6 @@ align-self: center;
 }
 .index-video {
     position: relative;
-    height: 500px;
     margin-bottom: 20px;
 
     @include media-custom(1440px) {
@@ -263,30 +262,58 @@ align-self: center;
         height: 100%;
     }
 
-    &__overlay {
+    .video {
+        position: relative;
+    }
+
+    video {
+        width: 100%;
+        height: 100%;
+    }
+
+    // .video::before {
+    //     content: '';
+    //     position: absolute;
+    //     top: 0;
+    //     width: 100%;
+    //     height: 100%;
+    //     background: linear-gradient(180deg, #0B0C0D 0%, rgba(11, 12, 13, 0) 48.96%, #0B0C0D 100%);
+    // }
+
+    .video::after {
+        content: '';
         position: absolute;
+        bottom: 0;
         width: 100%;
         height: 100%;
         background: linear-gradient(180deg, #0B0C0D 0%, rgba(11, 12, 13, 0) 48.96%, #0B0C0D 100%);
-        bottom: 0;
-        z-index: 1;
+        left: 0;
     }
+
+    // &__overlay {
+    //     position: absolute;
+    //     width: 100%;
+    //     height: 100%;
+    //     background: linear-gradient(180deg, #0B0C0D 0%, rgba(11, 12, 13, 0) 48.96%, #0B0C0D 100%);
+    //     bottom: 0;
+    //     z-index: 1;
+    // }
 
     &__info {
         position: absolute;
         bottom: 0;
         width: 100%;
-        height: 100%;
         display: flex;
         flex-direction: column;
         align-items: flex-end;
         justify-content: flex-end;
         z-index: 2;
-        margin-bottom: 60px;
+        // margin-bottom: 60px;
         padding-right: 20px;
 
         @include media-medium() {
             padding-right: 40px;
+            margin-bottom: 60px;
         }
 
         @include media-custom(1440px) {
@@ -378,6 +405,7 @@ align-self: center;
     position: relative;
     width: 100%;
     max-width: 170px;
+    cursor: pointer;
 
     @include media-medium() {
         max-width: 240px;
@@ -395,6 +423,18 @@ align-self: center;
         position: relative;
     }
 
+    &__card-link {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        text-decoration: none;
+        z-index: 1;
+
+        @include media-custom(1440px) {
+            display: none;
+        }
+    }
+
     &__top {
         position: absolute;
         width: 100%;
@@ -407,12 +447,24 @@ align-self: center;
         transition: all .3s ease-in-out;
 
         &:hover {
-            background: linear-gradient(162.26deg, rgba(11, 12, 13, 0.5) 43.48%, rgba(1, 1, 1, 0.5) 87.88%);
-            border: 1px solid #FFFFFF;
-            backdrop-filter: blur(2px);
+
+            @include media-custom(1440px) {
+                background: linear-gradient(162.26deg, rgba(11, 12, 13, 0.5) 43.48%, rgba(1, 1, 1, 0.5) 87.88%);
+                border: 1px solid #FFFFFF;
+                backdrop-filter: blur(2px);
+            }
 
             .clothes-card__link {
-                display: flex;
+                @include media-custom(1440px) {
+                    display: flex;
+                }
+            }
+
+            .clothes-card__heart {
+                @include media-custom(1440px) {
+                    opacity: 1;
+                    visibility: visible;
+                }
             }
         }
     }
@@ -425,6 +477,15 @@ align-self: center;
     &__badges-left {
         display: grid;
         gap:10px;
+    }
+    &__heart {
+        position: relative;
+        z-index: 3;
+        @include media-custom(1440px) {
+            transition: .3s ease-in-out;
+            opacity: 0;
+            visibility: hidden;
+        }
     }
     &__badge-new {
         width: 30px;
@@ -622,10 +683,11 @@ line-height: 16px;
 line-height: 19px;
 }
 
-@include media-custom(1440px) {
+@include media-custom(1920px) {
     font-size: 20px;
 line-height: 23px;
 }
+
 }
     }
 }
@@ -820,7 +882,7 @@ max-width: 359px;
     &__button-next {
         display: none;
         height: 100%;
-        max-width: 140px;
+        max-width: 100px;
         width: 100%;
         top: 21px;
         background: rgba(255, 255, 255, 0.5);
@@ -834,7 +896,8 @@ backdrop-filter: blur(2px);
 
     &__button-prev.swiper-button-disabled,
     &__button-next.swiper-button-disabled {
-        opacity: 1;
+        opacity: 0;
+        transition: .3s ease-in-out;
     } 
 
     &__button-prev span svg {
@@ -940,6 +1003,7 @@ backdrop-filter: blur(2px);
         position: relative;
         width: 100%;
         height: 100%;
+        overflow: hidden;
 
         picture {
             position: absolute;
@@ -968,14 +1032,17 @@ backdrop-filter: blur(2px);
             height: 100%;
             display: flex;
             align-items: flex-end;
-            transform: scale(0);
+            opacity: 0;
             visibility: hidden;
-            transition: .5s ease-in-out;
 
             &.active {
-                transform: scale(1);
+                opacity: 1;
                 visibility: visible;
                 z-index: 1;
+            animation-name: fadeUp, transformItem;
+            animation-duration: 1000ms, 1200ms;
+            animation-fill-mode: backwards;
+            animation-timing-function: cubic-bezier(0.65, 0.05, 0.36, 1);
             }
         }
     }
@@ -1077,11 +1144,9 @@ line-height: 75px;
             align-items: center;
             justify-content: center;
             text-decoration: none;
-            border: 1px solid black;
             font-weight: 300;
             font-size: 16px;
             line-height: 19px;
-            color: black;
             margin-bottom: 20px;
             background-color: transparent;
 
@@ -1095,7 +1160,7 @@ line-height: 75px;
                 font-size: 20px;
                 line-height: 23px;
                 text-transform: uppercase;
-                margin-bottom: 33px;
+                margin-bottom: 40px;
                 height: 50px;
             }
 
@@ -1103,7 +1168,6 @@ line-height: 75px;
                 max-width: 300px;
                 font-size: 24px;
                 line-height: 28px;
-                margin-bottom: 43px;
             }
         }
     }
@@ -1174,6 +1238,11 @@ line-height: 75px;
        display: grid;
        grid-auto-flow: column;
        gap: 10px;
+
+       picture {
+        height: 100%;
+        width: 100%;
+       }
 
        @include media-medium() {
         align-items: flex-end;
@@ -1336,14 +1405,24 @@ line-height: 75px;
             @include media-custom(1920px) {
                 padding: 10px 0;
             }
+
+            h3 {
+                @include media-custom(1440px) {
+                    font-size: 14px;
+                     line-height: 16px;
+                }
+
+                @include media-custom(1920px) {
+                    font-size: 16px;
+                    line-height: 19px;
+                }
+            }
         }
 
         &__link {
             max-width: 220px;
             height: 40px;
-            border: 1px solid white;
             background-color: transparent;
-            color: white;
             font-weight: 300;
             font-size: 10px;
             line-height: 16px;
@@ -1390,6 +1469,7 @@ line-height: 75px;
             --swiper-pagination-bullet-inactive-color:white;
             --swiper-pagination-bullet-inactive-opacity: .3;
             --swiper-pagination-bullet-horizontal-gap:5px;
+            transition: 0.4s ease-in-out;
 
             @include media-custom(1440px) {
                 --swiper-pagination-bullet-width:80px;
@@ -1552,7 +1632,7 @@ min-width: 80px;
     &__button-next {
         display: none;
         height: 100%;
-        max-width: 140px;
+        max-width: 100px;
         width: 100%;
         top: 21px;
         background: rgba(255, 255, 255, 0.5);
@@ -1561,17 +1641,17 @@ backdrop-filter: blur(2px);
 
         @include media-custom(1440px) {
             display: flex;
-            height: 570px;
+            height: 542px;
         }
         @include media-custom(1920px) {
-            display: flex;
-            height: 590px;
+            height: 564px;
         }
     }
 
     &__button-prev.swiper-button-disabled,
     &__button-next.swiper-button-disabled {
-        opacity: 1;
+        opacity: 0;
+        transition: .3s ease-in-out;
     } 
 
     &__button-prev span svg {
@@ -1580,8 +1660,8 @@ backdrop-filter: blur(2px);
 
     &__button-prev span,
     &__button-next span {
-        width: 40px;
-        height: 40px;
+        width: 60px;
+        height: 60px;
         background-color: transparent;
         border: 1px solid black;
         display: flex;
@@ -1594,11 +1674,6 @@ backdrop-filter: blur(2px);
             path {
                 transition: .3s ease-in-out;
             }
-        }
-
-        @include media-custom(1920px) {
-            width: 60px;
-            height: 60px;
         }
     }
 
@@ -1629,14 +1704,6 @@ backdrop-filter: blur(2px);
 
         .discount__top {
             align-items: flex-end;
-
-            @include media-medium() {
-                padding-right: 44px;
-            }
-
-            @include media-custom(1440px) {
-                padding-right: 0;
-            }
         }
         .discount__info {
             text-align: right;
@@ -1699,10 +1766,10 @@ backdrop-filter: blur(2px);
         margin-bottom: 43px;
 
         @include media-medium() {
-            padding-top: 5px;
-            padding-left: 40px;
-            padding-right: 25px;
-            padding-bottom: 5px;
+            padding-top: 10px;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-bottom: 10px;
             margin-bottom: 40px;
         }
 
@@ -1765,6 +1832,11 @@ span {
             text-transform: uppercase;
             padding-top: 11px;
             padding-bottom: 10px;
+            background-color: white;
+            color: black;
+            display: flex;
+    align-items: center;
+    justify-content: center;
 
             @include media-custom(1440px) {
                 padding: 16px 0;
@@ -1841,7 +1913,6 @@ span {
             padding-left: 58px;
             padding-right: 58px;
             position: relative;
-            border: 1px solid white;
             align-items: flex-start;
             grid-template-rows: repeat(2,max-content);
         }
@@ -1857,11 +1928,28 @@ span {
             position: absolute;
             width: 100%;
             height: 100%;
-            filter: blur(3px) brightness(0.5);
             z-index: -1;
+            transition: .3s ease-in-out;
 
             @include media-custom(1440px) {
                 display: block;
+            }
+        }
+
+        &:hover {
+
+            @include media-custom(1440px) {
+                border: 1px solid white;
+            }
+            img {
+                @include media-custom(1440px) {
+                    filter: blur(3px) brightness(0.5);
+                }
+            }
+            .accesories-collection__title-btn {
+                @include media-custom(1440px) {
+                    display: flex;
+                }
             }
         }
 
@@ -1923,10 +2011,45 @@ max-width: 369px;
     &__title-btn {
         display: none;
         max-width: 200px;
+        width: 100%;
         height: 40px;
-        font-weight: 700;
         font-size: 14px;
         line-height: 16px;
+       align-items: center;
+       justify-content: center;
+       overflow: hidden;
+       background-color: white;
+       color: black;
+       position: relative;
+       z-index: 0;
+       transition: .3s ease-in-out;
+       text-decoration: none;
+       text-transform: uppercase;
+       font-weight: 700;
+
+       &:hover,
+       &:active,
+       &:focus {
+          color: white;
+       }
+
+       &:hover::after,
+       &:active::after,
+       &:focus::after {
+        height: 100%;
+      }
+
+       &::after {
+        content: '';
+          position: absolute;
+          z-index: -1;
+        width: 100%;
+          height: 0;
+          top: 0;
+          left: 0;
+          background-color: black;
+        transition: all 0.4s;
+      }
 
         @include media-custom(1440px) {
             display: flex;
@@ -2180,10 +2303,10 @@ line-height: 42px;
             grid-template-columns: 540px repeat(2,280px);
             column-gap: 30px;
             row-gap: 40px;
+            justify-content: center;
         }
 
         @include media-custom(1920px) {
-            justify-content: center;
             grid-template-columns: 600px repeat(2,340px);
         }
     }
@@ -2366,9 +2489,23 @@ line-height: 23px;
 
     &__card-link--big {
         max-width: 180px;
+        width: 100%;
         height: 40px;
         font-size: 14px;
        line-height: 16px;
+       display: flex;
+       align-items: center;
+       justify-content: center;
+       overflow: hidden;
+       background-color: white;
+       color: black;
+       position: relative;
+       z-index: 0;
+       transition: .3s ease-in-out;
+       text-decoration: none;
+       text-transform: uppercase;
+       font-weight: 700;
+
 
        @include media-custom(1440px) {
         max-width: 220px;
@@ -2376,12 +2513,33 @@ line-height: 23px;
 
        @include media-custom(1920px) {
         max-width: 240px;
-        background-color: black;
-        color: white;
         font-size: 16px;
         line-height: 19px;
-        border-color: black;
        }
+
+       &:hover,
+       &:active,
+       &:focus {
+          color: white;
+       }
+
+       &:hover::after,
+       &:active::after,
+       &:focus::after {
+        height: 100%;
+      }
+
+       &::after {
+        content: '';
+          position: absolute;
+          z-index: -1;
+        width: 100%;
+          height: 0;
+          top: 0;
+          left: 0;
+          background-color: black;
+        transition: all 0.4s;
+      }
     }
 
     &__card-link--small {
@@ -2399,9 +2557,7 @@ line-height: 23px;
       @include media-custom(1440px) {
         display: none;
         max-width: 180px;
-        background-color: white;
         font-weight: 700;
-        color: black;
       }
     }
 
