--- a/src/styles/common/global.scss
+++ b/src/styles/common/global.scss
@@ -1331,16 +1331,14 @@ color: white;
 
   &__top {
     background-color: black;
-    padding-bottom: 20px;
+    padding-top: 40px;
+    padding-bottom: 40px;
     display: flex;
     align-items: center;
     justify-content: center;
 
     @include media-custom(1440px) {
-      padding-bottom: 75px;
-    }
-
-    @include media-custom(1920px) {
+      padding-top: 85px;
       padding-bottom: 85px;
     }
   }
