--- a/src/styles/pages/product-card.scss
+++ b/src/styles/pages/product-card.scss
@@ -1941,6 +1941,7 @@ line-height: 16px;
 text-transform: uppercase;
 color: white;
 text-decoration: none;
+transition: .3s ease-in-out;
 
 &:hover,
 &:active,
