--- a/src/styles/common/global.scss
+++ b/src/styles/common/global.scss
@@ -759,6 +759,145 @@ color: black;
   height: 3px;
   background-color: var(--red-color);
 }
+@keyframes glitch-logo {
+  0% {
+    opacity: 1;
+    -webkit-clip-path: inset(80% 0% 57% 0%);
+            clip-path: inset(80% 0% 57% 0%);
+  }
+  2.5% {
+    opacity: 1;
+    -webkit-clip-path: inset(18% 0% 57% 0%);
+            clip-path: inset(18% 0% 57% 0%);
+  }
+  5% {
+    opacity: 1;
+    -webkit-clip-path: inset(27% 0% 26% 0%);
+            clip-path: inset(27% 0% 26% 0%);
+  }
+  7.5% {
+    opacity: 1;
+    -webkit-clip-path: inset(86% 0% 63% 0%);
+            clip-path: inset(86% 0% 63% 0%);
+  }
+  10% {
+    opacity: 1;
+    -webkit-clip-path: inset(85% 0% 34% 0%);
+            clip-path: inset(85% 0% 34% 0%);
+  }
+  12.5% {
+    opacity: 1;
+    -webkit-clip-path: inset(58% 0% 75% 0%);
+            clip-path: inset(58% 0% 75% 0%);
+  }
+  15% {
+    opacity: 0.7;
+    -webkit-clip-path: inset(37% 0% 76% 0%);
+            clip-path: inset(37% 0% 76% 0%);
+  }
+  17.5% {
+    opacity: 0.2;
+    -webkit-clip-path: inset(78% 0% 8% 0%);
+            clip-path: inset(78% 0% 8% 0%);
+    top: -10px;
+    left: -10px;
+    z-index: -1;
+  }
+  20% {
+    opacity: 0.7;
+    -webkit-clip-path: inset(99% 0% 31% 0%);
+            clip-path: inset(99% 0% 31% 0%);
+  }
+  22.5% {
+    opacity: 1;
+    -webkit-clip-path: inset(39% 0% 75% 0%);
+            clip-path: inset(39% 0% 75% 0%);
+  }
+  25% {
+    opacity: 1;
+    -webkit-clip-path: inset(3% 0% 3% 0%);
+            clip-path: inset(3% 0% 3% 0%);
+  }
+  27.5% {
+    opacity: 0;
+    -webkit-clip-path: inset(0% 0% 0% 0%);
+            clip-path: inset(0% 0% 0% 0%);
+  }
+  100% {
+    opacity: 0;
+    -webkit-clip-path: inset(0% 0% 0% 0%);
+            clip-path: inset(0% 0% 0% 0%);
+  }
+}
+
+@keyframes glitch-logo-2 {
+  0% {
+    opacity: 1;
+    -webkit-clip-path: inset(99% 0% 66% 0%);
+            clip-path: inset(99% 0% 66% 0%);
+  }
+  2.5% {
+    opacity: 1;
+    -webkit-clip-path: inset(54% 0% 37% 0%);
+            clip-path: inset(54% 0% 37% 0%);
+  }
+  5% {
+    opacity: 1;
+    -webkit-clip-path: inset(30% 0% 69% 0%);
+            clip-path: inset(30% 0% 69% 0%);
+  }
+  7.5% {
+    opacity: 1;
+    -webkit-clip-path: inset(87% 0% 32% 0%);
+            clip-path: inset(87% 0% 32% 0%);
+  }
+  10% {
+    opacity: 1;
+    -webkit-clip-path: inset(76% 0% 46% 0%);
+            clip-path: inset(76% 0% 46% 0%);
+  }
+  12.5% {
+    opacity: 1;
+    -webkit-clip-path: inset(8% 0% 66% 0%);
+            clip-path: inset(8% 0% 66% 0%);
+  }
+  15% {
+    opacity: 1;
+    -webkit-clip-path: inset(72% 0% 5% 0%);
+            clip-path: inset(72% 0% 5% 0%);
+  }
+  17.5% {
+    opacity: 1;
+    -webkit-clip-path: inset(80% 0% 41% 0%);
+            clip-path: inset(80% 0% 41% 0%);
+  }
+  20% {
+    opacity: 1;
+    -webkit-clip-path: inset(57% 0% 22% 0%);
+            clip-path: inset(57% 0% 22% 0%);
+  }
+  22.5% {
+    opacity: 1;
+    -webkit-clip-path: inset(15% 0% 81% 0%);
+            clip-path: inset(15% 0% 81% 0%);
+  }
+  25% {
+    opacity: 1;
+    -webkit-clip-path: inset(49% 0% 64% 0%);
+            clip-path: inset(49% 0% 64% 0%);
+  }
+  27.5% {
+    opacity: 0;
+    -webkit-clip-path: inset(0% 0% 0% 0%);
+            clip-path: inset(0% 0% 0% 0%);
+  }
+  100% {
+    opacity: 0;
+    -webkit-clip-path: inset(0% 0% 0% 0%);
+            clip-path: inset(0% 0% 0% 0%);
+  }
+}
+
 // header styles
 .header {
   background-color: black;
@@ -811,16 +950,60 @@ color: black;
   &__logo {
     text-decoration: none;
     margin-top: 4px;
-    svg {
-      @include media-medium() {
-        width: 234px;
-        height: 34px;
-      }
-      @include media-custom(1920px) {
-        width: 290px;
-        height: 30px;
-      }
-    }
+    position: relative;
+    z-index: 0;
+    display: block;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-image: url(../resources/svgSprites/svgSprite.svg#header-logo);
+    width: 160px;
+    padding-bottom: 10%;
+    // svg {
+      
+
+    //   @include media-medium() {
+    //     width: 234px;
+    //     height: 34px;
+    //   }
+    //   @include media-custom(1920px) {
+    //     width: 290px;
+    //     height: 30px;
+    //   }
+    // }
+  }
+  &__logo::before {
+    content: '';
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    filter: hue-rotate(90deg);
+    background: inherit;
+    z-index: -1;
+    position: absolute;
+    display: block;
+    opacity: 0;
+  }
+  &__logo::after {
+    content: '';
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    filter: hue-rotate(230deg);
+    background: inherit;
+    z-index: -1;
+    position: absolute;
+    display: block;
+    opacity: 0;
+  }
+
+  &__logo:hover::before {
+    animation: glitch-logo 4s infinite linear alternate-reverse;
+  }
+  &__logo:hover::after {
+    animation: glitch-logo-2 4s infinite linear alternate-reverse;
   }
 
   &__menu {
