--- a/src/styles/pages/product-card.scss
+++ b/src/styles/pages/product-card.scss
@@ -12,7 +12,7 @@
         max-width: 520px;
     }
     @include media-custom(1920px) {
-        max-width: 740px;
+        max-width: 820px;
     }
     &__wrapper {
         padding: 0;
@@ -53,6 +53,8 @@
             align-items: flex-end;
             justify-content: space-between;
             margin-top: 18px;
+            margin-left: 10px;
+            margin-right: 10px;
         }
         @include media-custom(1440px) {
             margin-top: 19px;
@@ -853,12 +855,33 @@ line-height: 23px;
     }
 }
 .table-modal {
+    display: flex;
     align-items: center;
     justify-content: center;
+    background-color: rgba(255, 255, 255, 0.3);
+    backdrop-filter: blur(3px);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    transition: .3s ease-in-out;
+    z-index: -999;
+    opacity: 0;
+    visibility: hidden;
+
+    &.active {
+        opacity: 1;
+        visibility: visible;
+        z-index: 999;
+    }
    
     &__content {
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
     padding: 30px 20px;
+    background-color: white;
+    width: 100%;
 
     @include media-custom(376px) {
         margin-left: 10px;
@@ -1026,15 +1049,7 @@ line-height: 19px;
     }
 }
 .product-descr-slider {
-    padding-top: 20px;
-    padding-bottom: 20px;
-    background: linear-gradient(146.62deg, #000000 0%, #101112 53.65%);
-
-    @include media-medium() {
-        padding-top: 80px;
-        padding-bottom: 80px;
-    }
-
+    
     &__wrapper {
         padding: 0;
         margin: 0;
@@ -1085,12 +1100,18 @@ line-height: 19px;
     }
 }
 .product-descr-slider-container {
+    background: linear-gradient(146.62deg, #000000 0%, #101112 53.65%);
+    padding-top: 20px;
+    padding-bottom: 20px;
+
     @include media-medium() {
         --padding-left: 15px !important;
         --padding-right: 15px !important;
         border-top:1px solid white !important;
         border-left:1px solid white !important;
         border-right:1px solid white !important;
+        padding-top: 80px;
+        padding-bottom: 80px;
     }
 
     @include media-custom(1440px) {
@@ -1197,6 +1218,7 @@ margin-bottom: 40px;
         align-items: center;
         justify-content: space-between;
         padding-bottom: 20px;
+        transition: .3s ease-in-out;
 
         &.active {
             @include media-medium() {
@@ -1281,7 +1303,7 @@ line-height: 28px;
     nav {
         overflow: hidden;
         height: 0;
-        transition: height .3s ease-in-out;
+        transition: 0.3s ease-in-out;
         background-color: rgba(41, 41, 41, 0.1);
     }
 
@@ -1460,6 +1482,7 @@ line-height: 42px;
 .gather-collection-list-wrapper {
     .simplebar-scrollbar {
         background: white;
+        border-radius: 7px;
     }
     .simplebar-scrollbar:before {
         background: white;
@@ -1652,6 +1675,7 @@ line-height: 28px;
         @include media-custom(1920px) {
             width: 200px;
             object-fit: contain;
+            margin-right: 60px;
         }
     }
 
@@ -1778,6 +1802,7 @@ padding-bottom: 10px;
         gap: 11px;
         padding: 7px 0;
         transition: .3s ease-in-out;
+        cursor: pointer;
 
         &.active {
             background-color: white;
@@ -1838,47 +1863,35 @@ color: white;
         gap: 10px;
         align-items: center;
         justify-content: center;
-        padding-top: 9px;
-        padding-bottom: 9px;
+        padding-top: 10px;
+        padding-bottom: 10px;
 
         @include media-medium() {
             padding-left: 12px;
             padding-right: 12px;
+            gap: 0;
         }
 
         button {
             background-color: transparent;
-            border-color: transparent;
+            border: none;
             display: flex;
             align-items: center;
             justify-content: center;
             font-weight: 300;
-font-size: 24px;
-line-height: 28px;
+font-size: 14px;
+line-height: 21px;
 color: rgba(255, 255, 255, 0.7);
 transition: .3s ease-in-out;
 text-transform: uppercase;
 padding: 0;
 margin: 0;
-
-@include media-medium() {
-    font-size: 20px;
-line-height: 23px;
-}
+padding: 5px 10px;
 
 &.active {
 color: white;
 font-weight: 700;
 background-color: var(--pink-color);
-padding: 6px 5px;
-border-color: var(--pink-color);
-
-@include media-medium() {
-    padding-top: 3px;
-    padding-bottom: 4px;
-    padding-left: 2px;
-    padding-right: 2px;
-}
 }
         }
     }
