--- a/src/styles/pages/telEnter.scss
+++ b/src/styles/pages/telEnter.scss
@@ -40,9 +40,9 @@
     &__submit-btn {
         font-weight: 300;
         max-width: 300px;
-        height: 60px;
+        height: 49px;
         font-weight: 300;
-font-size: 20px;
+font-size: 16px;
 line-height: 23px;
 text-transform: uppercase;
 color: black;
@@ -51,7 +51,6 @@ margin-right: auto;
 
 @include media-medium() {
     max-width: 231px;
-    height: 53px;
 }
 @include media-custom(1440px) {
     margin-left: 0;
@@ -73,12 +72,12 @@ margin-bottom: 20px;
     }
 
     &__row {
+        margin-bottom: 30px;
         @include media-medium() {
             display: grid;
             grid-auto-flow: column;
             align-items: center;
             justify-content: space-between;
-            margin-bottom: 30px;
         }
     }
 
@@ -87,6 +86,7 @@ margin-bottom: 20px;
 
         @include media-medium() {
             margin-bottom: 0;
+            text-align: right;
         }
     }
 
@@ -153,8 +153,8 @@ color: black;
         font-weight: 300;
 font-size: 14px;
 line-height: 16px;
-padding-top: 21px;
-padding-bottom: 23px;
+padding-top: 10px;
+padding-bottom: 10px;
 padding-left: 38px;
 padding-right: 37px;
 display: grid;
@@ -167,8 +167,6 @@ background-color: rgba(41, 41, 41, 0.1);
 margin-bottom: 40px;
 
 @include media-medium() {
-    padding-top: 10px;
-    padding-bottom: 10px;
     padding-left: 20px;
     padding-right: 0;
     justify-content: flex-start;
@@ -229,7 +227,7 @@ a {
             border-color: transparent;
             width: 100%;
             height: 100%;
-            padding-left: 13px;
+            padding-left: 17px;
 
             @include media-custom(1440px) {
                 font-size: 48px;
@@ -253,14 +251,13 @@ a {
         gap: 40px;
 
         @include media-medium() {
-            grid-template-columns: 287px 109px;
-            gap: 64px;
+             grid-auto-flow: column;
+             grid-auto-columns: max-content;
+             justify-content: space-between;
             margin: 0 15px;
         }
         @include media-custom(1440px) {
-            grid-template-columns: 228px 287px;
             margin: 0;
-            gap: 105px;
         }
     }
 
@@ -273,9 +270,8 @@ text-transform: uppercase;
 padding: 0;
 
 @include media-medium() {
-    font-size: 20px;
-    line-height: 23px;
-    height: 53px;
+    max-width: 240px;
+    padding: 0 10px;
 }
 
 @include media-custom(1440px) {
@@ -291,9 +287,8 @@ padding: 0;
         height: 49px;
 
         @include media-medium() {
-            height: 53px;
-            font-size: 20px;
-            line-height: 23px;
+            max-width: 170px;
+            padding: 0 10px;
         }
     }
 
