ready catalog page

--- a/src/styles/common/global.scss
+++ b/src/styles/common/global.scss
@@ -1052,6 +1052,20 @@ color: white;
   line-height: 42px;
 }
 }
+@keyframes ripple {
+  0% {
+    transform: scale(0, 0);
+    opacity: 1;
+  }
+  20% {
+    transform: scale(25, 25);
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    transform: scale(40, 40);
+  }
+}
 // header styles
 .header {
   background-color: black;
