ready order-making steps left-part

--- a/src/styles/common/global.scss
+++ b/src/styles/common/global.scss
@@ -80,6 +80,7 @@ select {
 --dark-grey-color:#A5A0A0;
 --green-color: #37A64F;
 --green-color-2: #05FF00;
+--green-color-3:#159400;
 --light-red-color: #CE4949;
 --yellow-color: #FFE600;
 --olive-color:#9B902B;
